--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "redux": "^3.6.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
